musl.txt
Using built-in specs.
Reading specs from /usr/lib/musl/lib/musl-gcc.specs
rename spec cpp_options to old_cpp_options
COLLECT_GCC=gcc
COLLECT_LTO_WRAPPER=/usr/lib/gcc/x86_64-pc-linux-gnu/12.1.0/lto-wrapper
Target: x86_64-pc-linux-gnu
Configured with: /build/gcc/src/gcc/configure --enable-languages=c,c++,ada,fortran,go,lto,objc,obj-c++ --enable-bootstrap --prefix=/usr --libdir=/usr/lib --libexecdir=/usr/lib --mandir=/usr/share/man --infodir=/usr/share/info --with-bugurl=https://bugs.archlinux.org/ --with-linker-hash-style=gnu --with-system-zlib --enable-__cxa_atexit --enable-cet=auto --enable-checking=release --enable-clocale=gnu --enable-default-pie --enable-default-ssp --enable-gnu-indirect-function --enable-gnu-unique-object --enable-linker-build-id --enable-lto --enable-multilib --enable-plugin --enable-shared --enable-threads=posix --disable-libssp --disable-libstdcxx-pch --disable-werror --with-build-config=bootstrap-lto --enable-link-serialization=1
Thread model: posix
Supported LTO compression algorithms: zlib zstd
gcc version 12.1.0 (GCC) 
COLLECT_GCC_OPTIONS='-o' 'x11s' '-v' '-I' '/usr/include' '-I' '/usr/local/include' '-I' '/usr/lib/gcc/x86_64-pc-linux-gnu/12.1.0/include-fixed' '-w' '-specs=/usr/lib/musl/lib/musl-gcc.specs' '-mtune=generic' '-march=x86-64'
 /usr/lib/gcc/x86_64-pc-linux-gnu/12.1.0/cc1 -quiet -v -I /usr/include -I /usr/local/include -I /usr/lib/gcc/x86_64-pc-linux-gnu/12.1.0/include-fixed x11s.c -nostdinc -isystem /usr/lib/musl/include -isystem /usr/lib/gcc/x86_64-pc-linux-gnu/12.1.0/include -quiet -dumpbase x11s.c -dumpbase-ext .c -mtune=generic -march=x86-64 -w -version -o /tmp/ccDNekoY.s
GNU C17 (GCC) version 12.1.0 (x86_64-pc-linux-gnu)
	compiled by GNU C version 12.1.0, GMP version 6.2.1, MPFR version 4.1.0-p13, MPC version 1.2.1, isl version isl-0.25-GMP

GGC heuristics: --param ggc-min-expand=100 --param ggc-min-heapsize=131072
#include "..." search starts here:
#include <...> search starts here:
 /usr/include
 /usr/local/include
 /usr/lib/gcc/x86_64-pc-linux-gnu/12.1.0/include-fixed
 /usr/lib/musl/include
 /usr/lib/gcc/x86_64-pc-linux-gnu/12.1.0/include
End of search list.
GNU C17 (GCC) version 12.1.0 (x86_64-pc-linux-gnu)
	compiled by GNU C version 12.1.0, GMP version 6.2.1, MPFR version 4.1.0-p13, MPC version 1.2.1, isl version isl-0.25-GMP

GGC heuristics: --param ggc-min-expand=100 --param ggc-min-heapsize=131072
Compiler executable checksum: 3e6a47a96552b6758214eb71bda8ede7
In file included from /usr/include/bits/types/struct_timespec.h:7,
                 from /usr/include/signal.h:53,
                 from x11s.c:9:
/usr/include/bits/types/time_t.h:8:9: error: unknown type name ‘__time64_t’
    8 | typedef __time64_t time_t;
      |         ^~~~~~~~~~
/usr/include/bits/types/struct_timespec.h:14:3: error: unknown type name ‘__time64_t’
   14 |   __time64_t tv_sec;            /* Seconds.  */
      |   ^~~~~~~~~~
In file included from x11s.c:10:
/usr/include/stdio.h:52:9: error: unknown type name ‘__gnuc_va_list’
   52 | typedef __gnuc_va_list va_list;
      |         ^~~~~~~~~~~~~~
/usr/include/stdio.h:52:24: error: conflicting types for ‘va_list’; have ‘int’
   52 | typedef __gnuc_va_list va_list;
      |                        ^~~~~~~
In file included from /usr/lib/musl/include/stdarg.h:10,
                 from x11s.c:8:
/usr/lib/musl/include/bits/alltypes.h:326:27: note: previous declaration of ‘va_list’ with type ‘va_list’ {aka ‘__va_list_tag[1]’}
  326 | typedef __builtin_va_list va_list;
      |                           ^~~~~~~
/usr/include/stdio.h:366:22: error: unknown type name ‘__gnuc_va_list’
  366 |                      __gnuc_va_list __arg);
      |                      ^~~~~~~~~~~~~~
/usr/include/stdio.h:371:54: error: unknown type name ‘__gnuc_va_list’
  371 | extern int vprintf (const char *__restrict __format, __gnuc_va_list __arg);
      |                                                      ^~~~~~~~~~~~~~
/usr/include/stdio.h:374:22: error: unknown type name ‘__gnuc_va_list’
  374 |                      __gnuc_va_list __arg) __THROWNL;
      |                      ^~~~~~~~~~~~~~
/usr/include/stdio.h:383:56: error: unknown type name ‘__gnuc_va_list’
  383 |                       const char *__restrict __format, __gnuc_va_list __arg)
      |                                                        ^~~~~~~~~~~~~~
/usr/include/stdio.h:404:22: error: unknown type name ‘__gnuc_va_list’
  404 |                      __gnuc_va_list __arg)
      |                      ^~~~~~~~~~~~~~
/usr/include/stdio.h:460:21: error: unknown type name ‘__gnuc_va_list’
  460 |                     __gnuc_va_list __arg)
      |                     ^~~~~~~~~~~~~~
/usr/include/stdio.h:467:53: error: unknown type name ‘__gnuc_va_list’
  467 | extern int vscanf (const char *__restrict __format, __gnuc_va_list __arg)
      |                                                     ^~~~~~~~~~~~~~
/usr/include/stdio.h:472:54: error: unknown type name ‘__gnuc_va_list’
  472 |                     const char *__restrict __format, __gnuc_va_list __arg)
      |                                                      ^~~~~~~~~~~~~~
In file included from /usr/include/features.h:490,
                 from /usr/include/dlfcn.h:22,
                 from x11s.c:6:
/usr/include/stdio.h:481:58: error: unknown type name ‘__gnuc_va_list’
  481 |                         const char *__restrict __format, __gnuc_va_list __arg),
      |                                                          ^~~~~~~~~~~~~~
/usr/include/sys/cdefs.h:247:46: note: in definition of macro ‘__REDIRECT’
  247 | # define __REDIRECT(name, proto, alias) name proto __asm__ (__ASMNAME (#alias))
      |                                              ^~~~~
/usr/include/stdio.h:485:33: error: unknown type name ‘__gnuc_va_list’
  485 |                                 __gnuc_va_list __arg), __isoc99_vscanf)
      |                                 ^~~~~~~~~~~~~~
/usr/include/sys/cdefs.h:247:46: note: in definition of macro ‘__REDIRECT’
  247 | # define __REDIRECT(name, proto, alias) name proto __asm__ (__ASMNAME (#alias))
      |                                              ^~~~~
/usr/include/stdio.h:490:29: error: unknown type name ‘__gnuc_va_list’
  490 |                             __gnuc_va_list __arg), __isoc99_vsscanf)
      |                             ^~~~~~~~~~~~~~
/usr/include/sys/cdefs.h:255:11: note: in definition of macro ‘__REDIRECT_NTH’
  255 |      name proto __asm__ (__ASMNAME (#alias)) __THROW
      |           ^~~~~
In file included from /usr/include/sys/select.h:37,
                 from /usr/include/sys/types.h:179,
                 from /usr/include/stdlib.h:395,
                 from x11s.c:11:
/usr/include/bits/types/struct_timeval.h:11:3: error: unknown type name ‘__time64_t’
   11 |   __time64_t tv_sec;            /* Seconds.  */
      |   ^~~~~~~~~~
